@@ -31,7 +31,7 @@
  * @package org.zenmagick.store.admin.mvc.controller.ajax
  * @version $Id$
  */
-class ZMAjaxPluginAdminController extends ZMAjaxController {
+class ZMAjaxPluginAdminController extends ZMScaffoldController {
 
     /**
      * Install plugin.
